--- a/haste-server/static/application.css
+++ b/haste-server/static/application.css
@@ -1,5 +1,5 @@
 body {
-	background: #002b36;
+	background: #282c34;
 	padding: 20px 50px;
 	margin: 0px;
 }
@@ -13,7 +13,8 @@ textarea {
 	padding: 0px;
 	width: 100%;
 	height: 100%;
-	font-family: monospace;
+	font-family: 'Fira Code', Consolas, Andale Mono WT, Andale Mono, Lucida Console, Lucida Sans Typewriter, DejaVu Sans Mono,
+		Bitstream Vera Sans Mono, Liberation Mono, Nimbus Mono L, Monaco, Courier New, Courier, monospace;
 	outline: none;
 	resize: none;
 	font-size: 13px;
@@ -25,13 +26,13 @@ textarea {
 
 #linenos {
 	color: #7d7d7d;
-	z-index: -1000;
 	position: absolute;
 	top: 20px;
 	left: 0px;
 	width: 30px; /* 30 to get 20 away from box */
 	font-size: 13px;
-	font-family: monospace;
+	font-family: 'Fira Code', Consolas, Andale Mono WT, Andale Mono, Lucida Console, Lucida Sans Typewriter, DejaVu Sans Mono,
+		Bitstream Vera Sans Mono, Liberation Mono, Nimbus Mono L, Monaco, Courier New, Courier, monospace;
 	text-align: right;
 	user-select: none;
 }
@@ -48,9 +49,13 @@ textarea {
 	overflow: inherit;
 }
 
-#box code {
+#box code,
+pre {
 	padding: 0px;
 	background: transparent !important; /* don't hide hastebox */
+	font-size: 15px;
+	font-family: 'Fira Code', Consolas, Andale Mono WT, Andale Mono, Lucida Console, Lucida Sans Typewriter, DejaVu Sans Mono,
+		Bitstream Vera Sans Mono, Liberation Mono, Nimbus Mono L, Monaco, Courier New, Courier, monospace;
 }
 
 /* key */
@@ -65,11 +70,11 @@ textarea {
 #box1 {
 	padding: 5px;
 	text-align: center;
-	background: #00222b;
+	background: #141512;
 }
 
 #box2 {
-	background: #08323c;
+	background: #141512;
 	font-size: 0px;
 	padding: 0px 5px;
 }
@@ -117,7 +122,7 @@ textarea {
 
 #box3,
 #messages li {
-	background: #173e48;
+	background: #141512d3;
 	font-family: Helvetica, sans-serif;
 	font-size: 12px;
 	line-height: 14px;
@@ -176,15 +181,6 @@ textarea {
 	background-position: -116px bottom;
 }
 
-#box2 .function.twitter {
-	background-position: -153px top;
-}
-#box2 .function.enabled.twitter {
-	background-position: -153px center;
-}
-#box2 .function.enabled.twitter:hover {
-	background-position: -153px bottom;
-}
 #box2 .button-picture {
 	border-width: 0;
 	font-size: inherit;
