--- a/haste-server/src/frontend/styles/application.scss
+++ b/haste-server/src/frontend/styles/application.scss
@@ -67,7 +67,8 @@ pre {
 	position: fixed;
 	top: 0px;
 	right: 0px;
-	z-index: +1000; /* watch out */
+	z-index: 1000;
+	width: 200px;
 }
 
 #box1 {
@@ -80,6 +81,10 @@ pre {
 	background: $darkBlack;
 	font-size: 0px;
 	padding: 0px 5px;
+	display: flex;
+	align-items: center;
+	align-content: center;
+	justify-content: center;
 }
 
 #box1 a.logo,
@@ -111,20 +116,7 @@ pre {
 	cursor: pointer;
 }
 
-#pointer {
-	display: block;
-	height: 5px;
-	width: 10px;
-	background: url(../images/hover-dropdown-tip.png);
-	bottom: 0px;
-	position: absolute;
-	margin: auto;
-	left: 0px;
-	right: 0px;
-}
-
-#box3,
-#messages li {
+#box3 {
 	background: $darkBlack;
 	font-family: Helvetica, sans-serif;
 	font-size: 12px;
@@ -133,8 +125,7 @@ pre {
 	user-select: none;
 }
 
-#box3 .label,
-#messages li {
+#box3 .label {
 	color: #fff;
 	font-weight: bold;
 }
@@ -187,23 +178,4 @@ pre {
 #box2 .button-picture {
 	border-width: 0;
 	font-size: inherit;
-}
-
-#messages {
-	position: fixed;
-	top: 0px;
-	right: 138px;
-	margin: 0;
-	padding: 0;
-	width: 400px;
-}
-
-#messages li {
-	background: rgba(23, 62, 72, 0.8);
-	margin: 0 auto;
-	list-style: none;
-}
-
-#messages li.error {
-	background: rgba(102, 8, 0, 0.8);
 }
