chore: update dev depedencies

--- a/src/frontend/styles/application.scss
+++ b/src/frontend/styles/application.scss
@@ -1,6 +1,28 @@
-$fonts: 'Fira Code', Consolas, Andale Mono WT, Andale Mono, Lucida Console, Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono,
-	Liberation Mono, Nimbus Mono L, Monaco, Courier New, Courier, monospace, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-	Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+$fonts:
+	'Fira Code',
+	Consolas,
+	Andale Mono WT,
+	Andale Mono,
+	Lucida Console,
+	Lucida Sans Typewriter,
+	DejaVu Sans Mono,
+	Bitstream Vera Sans Mono,
+	Liberation Mono,
+	Nimbus Mono L,
+	Monaco,
+	Courier New,
+	Courier,
+	monospace,
+	-apple-system,
+	BlinkMacSystemFont,
+	'Segoe UI',
+	Roboto,
+	Oxygen,
+	Ubuntu,
+	Cantarell,
+	'Open Sans',
+	'Helvetica Neue',
+	sans-serif;
 
 $darkBlack: #141512;
 
