--- a/src/frontend/public/index.css
+++ b/src/frontend/public/index.css
@@ -1,30 +1,10 @@
-$fonts:
-	'Fira Code',
-	Consolas,
-	Andale Mono WT,
-	Andale Mono,
-	Lucida Console,
-	Lucida Sans Typewriter,
-	DejaVu Sans Mono,
-	Bitstream Vera Sans Mono,
-	Liberation Mono,
-	Nimbus Mono L,
-	Monaco,
-	Courier New,
-	Courier,
-	monospace,
-	-apple-system,
-	BlinkMacSystemFont,
-	'Segoe UI',
-	Roboto,
-	Oxygen,
-	Ubuntu,
-	Cantarell,
-	'Open Sans',
-	'Helvetica Neue',
-	sans-serif;
+:root {
+	--fonts: 'Fira Code', Consolas, Andale Mono WT, Andale Mono, Lucida Console, Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono,
+		Liberation Mono, Nimbus Mono L, Monaco, Courier New, Courier, monospace, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-$darkBlack: #141512;
+	--dark-black: #141512;
+}
 
 body {
 	background: #282c34;
@@ -41,7 +21,7 @@ textarea {
 	padding: 0px;
 	width: 100%;
 	height: 100%;
-	font-family: $fonts;
+	font-family: var(--fonts);
 	outline: none;
 	resize: none;
 	font-size: 13px;
@@ -58,7 +38,7 @@ textarea {
 	left: 0px;
 	width: 30px; /* 30 to get 20 away from box */
 	font-size: 15px;
-	font-family: $fonts;
+	font-family: var(--fonts);
 	text-align: right;
 	user-select: none;
 }
@@ -80,7 +60,7 @@ pre {
 	padding: 0px;
 	background: transparent !important; /* don't hide hastebox */
 	font-size: 15px;
-	font-family: $fonts;
+	font-family: var(--fonts);
 }
 
 /* key */
@@ -96,11 +76,11 @@ pre {
 #box1 {
 	padding: 5px;
 	text-align: center;
-	background: $darkBlack;
+	background: var(--dark-black);
 }
 
 #box2 {
-	background: $darkBlack;
+	background: var(--dark-black);
 	font-size: 0px;
 	padding: 0px 5px;
 	display: flex;
@@ -112,7 +92,7 @@ pre {
 #box1 a.logo,
 #box1 a.logo:visited {
 	display: inline-block;
-	background: url(../images/logo.png);
+	background: url(/logo.png);
 	width: 126px;
 	height: 42px;
 }
@@ -122,7 +102,7 @@ pre {
 }
 
 #box2 .function {
-	background: url(../images/function-icons.png);
+	background: url(/function-icons.png);
 	width: 32px;
 	height: 37px;
 	display: inline-block;
@@ -139,7 +119,7 @@ pre {
 }
 
 #box3 {
-	background: $darkBlack;
+	background: var(--dark-black);
 	font-family: Helvetica, sans-serif;
 	font-size: 12px;
 	line-height: 14px;
@@ -160,9 +140,11 @@ pre {
 #box2 .function.save {
 	background-position: -5px top;
 }
+
 #box2 .function.enabled.save {
 	background-position: -5px center;
 }
+
 #box2 .function.enabled.save:hover {
 	background-position: -5px bottom;
 }
@@ -170,9 +152,11 @@ pre {
 #box2 .function.new {
 	background-position: -42px top;
 }
+
 #box2 .function.enabled.new {
 	background-position: -42px center;
 }
+
 #box2 .function.enabled.new:hover {
 	background-position: -42px bottom;
 }
@@ -180,9 +164,11 @@ pre {
 #box2 .function.duplicate {
 	background-position: -79px top;
 }
+
 #box2 .function.enabled.duplicate {
 	background-position: -79px center;
 }
+
 #box2 .function.enabled.duplicate:hover {
 	background-position: -79px bottom;
 }
@@ -190,9 +176,11 @@ pre {
 #box2 .function.raw {
 	background-position: -116px top;
 }
+
 #box2 .function.enabled.raw {
 	background-position: -116px center;
 }
+
 #box2 .function.enabled.raw:hover {
 	background-position: -116px bottom;
 }
